--- a/Proposal/symbols.tex
+++ b/Proposal/symbols.tex
@@ -30,6 +30,7 @@
 \newcommand{\imageaxes}{\reponame{ImageAxes.jl}}
 \newcommand{\imagemetadata}{\reponame{ImageMetadata.jl}}
 \newcommand{\imagefiltering}{\reponame{ImageFiltering.jl}}
+\newcommand{\imagefeature}{\reponame{ImageFeature.jl}}
 \newcommand{\imagemorphology}{\reponame{ImageMorphology.jl}}
 \newcommand{\imagetracking}{\reponame{ImageTracking.jl}}
 \newcommand{\images}{\reponame{Images.jl}}
@@ -55,6 +56,7 @@
 \newcommand{\repoimageaxes}{\gitrepo{\juliaimages}{\imageaxes}}
 \newcommand{\repoimagemetadata}{\gitrepo{\juliaimages}{\imagemetadata}}
 \newcommand{\repoimagefiltering}{\gitrepo{\juliaimages}{\imagefiltering}}
+\newcommand{\repoimagefeature}{\gitrepo{\juliaimages}{\imagefeature}}
 \newcommand{\repoimagemorphology}{\gitrepo{\juliaimages}{\imagemorphology}}
 \newcommand{\repoimagetracking}{\gitrepo{\juliaimages}{\imagetracking}}
 \newcommand{\repodipcode}{\gitrepo{Johnnychen94}{Digital-Image-Processing-Gonzalez}}
