--- a/Proposal/main.tex
+++ b/Proposal/main.tex
@@ -1,6 +1,6 @@
 % !TEX root = ./main.tex
 
-\documentclass[14pt]{extarticle}
+\documentclass[14pt, twoside]{extarticle}
 \usepackage[utf8]{inputenc}
 \usepackage[affil-it]{authblk}
 \usepackage[colorlinks=true,urlcolor=blue,citecolor=SpringGreen4,bookmarks=true]{hyperref}
@@ -14,8 +14,8 @@
 \usepackage{fancyhdr}
 
 \pagestyle{fancy}
-\fancyhead[LO]{Google Summer of Code 2019}
-\fancyhead[C]{}
+\fancyhead[LE]{Google Summer of Code 2019}
+\fancyhead[LO]{Towards Better Images.jl Ecosystem}
 \fancyfoot[L,R]{}
 \fancyfoot[C]{\thepage}
 \renewcommand{\headrulewidth}{0.4pt}
