--- a/Proposal/project.tex
+++ b/Proposal/project.tex
@@ -40,6 +40,7 @@ Fortunately the problem is well-concerned in the community. Issues such as
     \item \issue{\juliaimages}{\imagefeature}{46} -- Is \images{} just a convenient meta package?
     \item \issue{zygmuntszpak}{\imagebinarization}{23} -- What's the appropriate argument order?
     \item \issue{zygmuntszpak}{\imagebinarization}{24} -- Export limited number of symbols?
+    \item \issue{zygmuntszpak}{\imagebinarization}{26} -- Filter specification: alternative to \mintinline{julia}{binarize}
 \end{itemize}
 }
 discuss the coding styles and programming practice in the most generic way. \par
